traces/bug_223.txt
examples++-load/Element_PkEdge.cpp:189: error: DEAD_STORE
  The value written to &e (type int) is never used.
Showing all 1 steps of the trace


examples++-load/Element_PkEdge.cpp:189:21: Write of unused value
187.                   for(int df=0;df<ndf;++df)
188.                   {
189.                       int e= df/npe;
                           ^
190.                       int n= df%npe;
191.                       Data[o[0]+df]= 6; // 3+e;
